--- a/StyleSheet/style.css
+++ b/StyleSheet/style.css
@@ -82,6 +82,19 @@ form{
 
 }
 
+@media (min-width: 600px){
+    .placehold{
+        width: 600px;
+    }
+    
+}
+@media (max-width: 600px){
+    .placehold{
+        width: 300px;
+    }
+    
+}
+
 #btn-search{
     font-size: 14px;
     color: #3c4043;
